--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <div class="nContainer">
-        <p class="notification"></p>
-    </div>
 
     <div class="container">
         <h4>ToDo List</h4>
@@ -33,7 +30,7 @@
 
             <div class="filter">
                 <input type="text" id="penTaskFilter" placeholder="Filter Pen Todos..." onkeyup="filterPenTask()">
-                <input type="text" id="comTaskFilter" placeholder="Filter Com Todos..." style="display: none;"
+                <input type="text" id="comTaskFilter" placeholder="Filter Fin Todos..." style="display: none;"
                     onkeyup="filterCompleteTask()">
             </div>
         </div>
@@ -57,8 +54,8 @@
                 </ul>
 
                 <div class="footer comTodos">
-                    <span>You have completed <span class="completeNum">0</span> task.</span>
-                    <button>All Clear</button>
+                    <span>You have <span class="completeNum">0</span> Finished task.</span>
+                    <button class="deleteAllComTodos" style="display: none;">All Clear</button>
                 </div>
             </div>
         </div>
